--- a/Calculadora Cuadratica/index.html
+++ b/Calculadora Cuadratica/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Cuadratica</title>
+    <script src="decimal.js"></script>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -22,18 +23,19 @@
             </div>  
         </div>
         <div class="nav__boton">
-            <input id="btnDatosAEcuacion" class="nav__input-radio" type="radio" name="btn">
+            <input id="btnPuntosAFuncion" class="nav__input-radio" type="radio" name="btn">
             <div class="nav__texto">
-                <span class="nav__span">Datos a Ecuación</span>
+                <span class="nav__span">Puntos a Funcion</span>
             </div>  
         </div>
     </div>
     <div id="ecuacionContenedor" class="contenedor">
-        <input id="ecuacion" class="input" type="text" placeholder="Escriba una expresión algebraica"><br>
+        <input id="ecuacion" class="input" type="text" placeholder="Escriba una expresión algebraica" required>
+        <div id="botonSiguienteEcuacion" class="boton">Siguiente</div>
         <div id="datosEcuacion">
             Ecuación:
             <br>
-            <div id="mostrarEcuacion" class="contenedor__ecuacion"></div>
+            <span id="mostrarEcuacion" class="contenedor__ecuacion"></span>
             <br>
             <div class="contenedor__datos">
                 <div class="contenedor__abc">
@@ -52,7 +54,8 @@
         </div>
     </div>
     <div id="funcionContenedor" class="contenedor">
-        <input id="inputFuncion" class="input" type="text" placeholder="Escriba una expresión algebraica"><br>
+        <input id="inputFuncion" class="input" type="text" placeholder="Escriba una expresión algebraica" required>
+        <div id="botonSiguienteFuncion" class="boton">Siguiente</div>
         <div id="datosFuncion">
             Función: 
             <br>
@@ -73,29 +76,32 @@
                 Eje de Simetría: <span id="ejeSimetria"></span>
             </div>
             <div class="contenedor__funcion-informacion">
-                <i>f</i> (<input id="input-imagen" class="input-chico" type="number">) = <span id="imagen"></span>
+                <i>f</i> (<input id="input-imagen" class="input-chico" type="text">) = <span id="imagen"></span>
             </div>
             <div class="contenedor__funcion-informacion"><div id="mostrarEcuacionImagen">
-                a<i>x</i>² + b<i>x</i> + c</div> = <input id="input-preimagen" class="input-chico" type="number">
+                a<i>x</i>² + b<i>x</i> + c</div> = <input id="input-preimagen" class="input-chico" type="text">
                 <br> 
                 <i>x</i><sub>1</sub>= <span id="resultadoX1"></span>
                 <br>
                 <i>x</i><sub>2</sub> = <span id="resultadoX2"></span>
             </div>
             <div class="contenedor__funcion-informacion">
+                <span id="mostrarEcuacionGrafica"></span>
                 <canvas id="graficaCanvas" width="800" height="800"></canvas>
             </div>
         </div>
     </div>
-    <div id="datosAEcuacionContenedor" class="contenedor">
-        Encontrar función con raíces:<br>
-        <i>x</i><sub>1</sub> = <input id="inputX1Descomposicion" class="input-chico" type="number"><br>
-        <i>x</i><sub>2</sub> = <input id="inputX2Descomposicion" class="input-chico" type="number"><br><br>
-        Teniendo en cuenta que: <br>
-        <i>f</i> (<input id="xDelPuntoDescomposicion" class="input-chico" type="number">) = 
-        <input id="yDelPuntoDescomposicion" class="input-chico" type="number">
+    <div id="puntosAFuncionContenedor" class="contenedor">
+        Encontrar función dados los siguientes puntos:<br>
+        <div class="contenedor__puntos">
+            <i>f</i> (<input id="xPuntoH" type="number" class="input-chico" placeholder="x">) = <input id="yPuntoH" type="number" class="input-chico" placeholder="y"><br>
+            <i>f</i> (<input id="xPuntoI" type="number" class="input-chico" placeholder="x">) = <input id="yPuntoI" type="number" class="input-chico" placeholder="y"><br>
+            <i>f</i> (<input id="xPuntoJ" type="number" class="input-chico" placeholder="x">) = <input id="yPuntoJ" type="number" class="input-chico" placeholder="y"><br>
+        </div>
+        <br>
+        <div id="botonSiguienteMetodoReduccion" class="boton">Siguiente</div>
         <br><br>
-        <div class="contenedor__ecuacion"><i>f </i>(<i>x</i>) = <span id="mostrarFuncionDescomposicion"></span></div>
+        <div id="contenedorFuncionMetodoReduccion" class="contenedor__ecuacion"><i>f </i>(<i>x</i>) = <span id="mostrarFuncionMetodoReduccion"></span></div>
     </div>
     <script src="index.js"></script>
 </body>
