--- a/Calculadora Cuadratica/index.html
+++ b/Calculadora Cuadratica/index.html
@@ -31,7 +31,7 @@
     </div>
     <div id="ecuacionContenedor" class="contenedor">
         <input id="ecuacion" class="input" type="text" placeholder="Escriba una expresión algebraica" required>
-        <div id="botonSiguienteEcuacion" class="boton">Siguiente</div>
+        <div id="botonSiguienteEcuacion" class="boton">Siguiente</div><br><br>
         <div id="datosEcuacion">
             Ecuación:
             <br>
@@ -55,7 +55,7 @@
     </div>
     <div id="funcionContenedor" class="contenedor">
         <input id="inputFuncion" class="input" type="text" placeholder="Escriba una expresión algebraica" required>
-        <div id="botonSiguienteFuncion" class="boton">Siguiente</div>
+        <div id="botonSiguienteFuncion" class="boton">Siguiente</div><br><br>
         <div id="datosFuncion">
             Función: 
             <br>
