--- a/Calculadora Cuadratica/index.html
+++ b/Calculadora Cuadratica/index.html
@@ -30,8 +30,8 @@
         </div>
     </div>
     <div id="ecuacionContenedor" class="contenedor">
-        <input id="ecuacion" class="input" type="text" placeholder="Escriba una expresión algebraica" required>
-        <div id="botonSiguienteEcuacion" class="boton">Siguiente</div><br><br>
+        <input id="ecuacion" class="input" type="text" placeholder="Escriba una expresión algebraica" required><br>
+        <div id="botonSiguienteEcuacion" class="boton">Siguiente</div><br>
         <div id="datosEcuacion">
             Ecuación:
             <br>
@@ -54,8 +54,8 @@
         </div>
     </div>
     <div id="funcionContenedor" class="contenedor">
-        <input id="inputFuncion" class="input" type="text" placeholder="Escriba una expresión algebraica" required>
-        <div id="botonSiguienteFuncion" class="boton">Siguiente</div><br><br>
+        <input id="inputFuncion" class="input" type="text" placeholder="Escriba una expresión algebraica" required><br>
+        <div id="botonSiguienteFuncion" class="boton">Siguiente</div><br>
         <div id="datosFuncion">
             Función: 
             <br>
@@ -100,7 +100,7 @@
         </div>
         <br>
         <div id="botonSiguienteMetodoReduccion" class="boton">Siguiente</div>
-        <br><br>
+        <br>
         <div id="contenedorFuncionMetodoReduccion" class="contenedor__ecuacion"><i>f </i>(<i>x</i>) = <span id="mostrarFuncionMetodoReduccion"></span></div>
     </div>
     <script src="index.js"></script>
