--- a/Calculadora Cuadratica/index.html
+++ b/Calculadora Cuadratica/index.html
@@ -13,7 +13,7 @@
         <div class="nav__boton">
             <input id="btnEcuacion" class="nav__input-radio" type="radio" name="btn" checked="">
             <div class="nav__texto">
-                <span class="nav__span">Ecuación</span>
+                <span class="nav__span">Informacion</span>
             </div>
         </div>
         <div class="nav__boton">
@@ -30,13 +30,10 @@
         </div>
     </div>
     <div id="ecuacionContenedor" class="contenedor">
-        <input id="ecuacion" class="input" type="text" placeholder="Escriba una expresión algebraica" required><br>
+        <input id="ecuacion" class="input" type="text" placeholder="Escribe una función cuadrática" required><br>
         <div id="botonSiguienteEcuacion" class="boton">Siguiente</div><br>
         <div id="datosEcuacion">
-            Ecuación:
-            <br>
             <span id="mostrarEcuacion" class="contenedor__ecuacion"></span>
-            <br>
             <div class="contenedor__datos">
                 <div class="contenedor__abc">
                     a = <span id="aEcuacion"></span>
@@ -54,7 +51,7 @@
         </div>
     </div>
     <div id="funcionContenedor" class="contenedor">
-        <input id="inputFuncion" class="input" type="text" placeholder="Escriba una expresión algebraica" required><br>
+        <input id="inputFuncion" class="input" type="text" placeholder="Escribe una función cuadrática" required><br>
         <div id="botonSiguienteFuncion" class="boton">Siguiente</div><br>
         <div id="datosFuncion">
             Función: 
@@ -76,8 +73,8 @@
                 Eje de Simetría: <span id="ejeSimetria"></span>
             </div>
             <div style="display:flex; flex-direction: row;" class="contenedor__funcion-informacion">
-                <div><i>f</i> (<input id="input-imagen" class="input-chico" type="text">) = <span id="imagen"></span></div>
-                <div id="botonEnterImagen" class="boton-enter">↩</div>
+                <div><i>f</i> (<input id="input-imagen" class="input--chico" type="text">) = <span id="imagen"></span></div>
+                <div id="botonEnterImagen" class="boton--enter">↩</div>
             </div>
             <div class="contenedor__funcion-informacion">
                 <div style="display:flex; flex-direction: row;">
@@ -85,9 +82,9 @@
                         <div id="mostrarEcuacionImagen">
                             a<i>x</i>² + b<i>x</i> + c
                         </div> 
-                        = <input id="input-preimagen" class="input-chico" type="text">
+                        = <input id="input-preimagen" class="input--chico" type="text">
                     </div>
-                    <div id="botonEnterPreimagen" class="boton-enter">↩</div>
+                    <div id="botonEnterPreimagen" class="boton--enter">↩</div>
                 </div>
                 <i>x</i><sub>1</sub>= <span id="resultadoX1"></span>
                 <br>
@@ -95,21 +92,26 @@
             </div>
             <div class="contenedor__funcion-informacion">
                 <span id="mostrarEcuacionGrafica"></span>
-                <canvas id="graficaCanvas" width="800" height="800"></canvas>
+                <canvas id="canvasFuncion" class="graficaCanvas" width="800" height="800"></canvas>
             </div>
         </div>
     </div>
     <div id="puntosAFuncionContenedor" class="contenedor">
         Encontrar función dados los siguientes puntos:<br>
         <div class="contenedor__puntos">
-            <i>f</i> (<input id="xPuntoH" type="number" class="input-chico" placeholder="x">) = <input id="yPuntoH" type="number" class="input-chico" placeholder="y"><br>
-            <i>f</i> (<input id="xPuntoI" type="number" class="input-chico" placeholder="x">) = <input id="yPuntoI" type="number" class="input-chico" placeholder="y"><br>
-            <i>f</i> (<input id="xPuntoJ" type="number" class="input-chico" placeholder="x">) = <input id="yPuntoJ" type="number" class="input-chico" placeholder="y"><br>
+            <i>f</i> (<input id="xPuntoH" type="number" class="input--chico" placeholder="x">) = <input id="yPuntoH" type="number" class="input--chico" placeholder="y"><br><br>
+            <i>f</i> (<input id="xPuntoI" type="number" class="input--chico" placeholder="x">) = <input id="yPuntoI" type="number" class="input--chico" placeholder="y"><br><br>
+            <i>f</i> (<input id="xPuntoJ" type="number" class="input--chico" placeholder="x">) = <input id="yPuntoJ" type="number" class="input--chico" placeholder="y"><br>
         </div>
         <br>
-        <div id="botonSiguienteMetodoReduccion" class="boton">Siguiente</div>
+        <div class="contenedor__botones">
+            <div id="botonSiguienteMetodoReduccion" class="boton">Encontrar</div>
+            <div id="botonPrevisualisarMetodoReduccion" class="boton">Previsualisar</div>
+        </div>
         <br>
-        <div id="contenedorFuncionMetodoReduccion" class="contenedor__ecuacion"><i>f </i>(<i>x</i>) = <span id="mostrarFuncionMetodoReduccion"></span></div>
+        <div id="contenedorFuncionMetodoReduccion" class="contenedor__ecuacion">
+            <i>f </i>(<i>x</i>) = <span id="mostrarFuncionMetodoReduccion"></span>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
