--- a/encontrar-funcion/index.html
+++ b/encontrar-funcion/index.html
@@ -9,6 +9,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"rel="stylesheet">
         <link rel="stylesheet" href="estilos.css">
+        <meta name="author" content="Eli Fainerman">
+        <meta name="robots" content="noindex">
     </head>
     <body>
         <article>
