--- a/funcion-cuadratica/index.html
+++ b/funcion-cuadratica/index.html
@@ -7,6 +7,8 @@
     <script src="decimal.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="author" content="Eli Fainerman">
+    <meta name="robots" content="noindex">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
