--- a/pitagoras/index.html
+++ b/pitagoras/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pitagoras</title>
+    <title>Teorema de Pitágoras</title>
     <link rel="stylesheet" href="index.css">
     <meta name="author" content="Eli Fainerman">
     <meta name="robots" content="noindex">
