Actualizar index.html

--- a/encontrar-funcion/index.html
+++ b/encontrar-funcion/index.html
@@ -44,7 +44,7 @@
                 <span class="span" id="funcion">f(x) = ax² + bx + c</span>
             </section>
         </article>
-<a href='
-https://archive.org/download/modern-family-s-05-e-20-australia/Modern%20Family%2FModern%20Family%20S01%20%28360p%20re-blurip%29%2FModern%20Family%20S01E01%20Pilot.mp4">Hola</a>        <script src="script.js"></script>
+<a href="https://archive.org/download/modern-family-s-05-e-20-australia/Modern%20Family%2FModern%20Family%20S01%20%28360p%20re-blurip%29%2FModern%20Family%20S01E01%20Pilot.mp4">Hola</a>        
+<script src="script.js"></script>
     </body>
 </html>
