--- a/funcion-cuadratica/index.html
+++ b/funcion-cuadratica/index.html
@@ -58,6 +58,9 @@
             <span class="span" id="imagenPreimagen">valor</span>
         </div>
         <br>
+        <button class="button" id="botonZoomOriginal">🏠</button>
+        <button class="button" id="botonMas">+</button>
+        <button class="button" id="botonMenos">-</button>
         <button class="button" id="botonGraficar">GRAFICAR</button>
         <br>
         <canvas class="canvas" id="canvasGraficarFuncion"></canvas>
