--- a/encontrar-funcion/index.html
+++ b/encontrar-funcion/index.html
@@ -26,24 +26,28 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><input type="number" class="input" placeholder="x" id="xPuntoH"></td>
-                                <td><input type="number" class="input" placeholder="y" id="yPuntoH"></td>
+                                <td><input type="number" class="input" placeholder="x" id="xPuntoH" value="1"></td>
+                                <td><input type="number" class="input" placeholder="y" id="yPuntoH" value="1"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" class="input" placeholder="x" id="xPuntoI"></td>
-                                <td><input type="number" class="input" placeholder="y" id="yPuntoI"></td>
+                                <td><input type="number" class="input" placeholder="x" id="xPuntoI" value="2"></td>
+                                <td><input type="number" class="input" placeholder="y" id="yPuntoI" value="4"></td>
                             </tr>
                             <tr>
-                                <td><input type="number" class="input" placeholder="x" id="xPuntoJ"></td>
-                                <td><input type="number" class="input" placeholder="y" id="yPuntoJ"></td>
+                                <td><input type="number" class="input" placeholder="x" id="xPuntoJ" value="-2"></td>
+                                <td><input type="number" class="input" placeholder="y" id="yPuntoJ" value="4"></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <br>
+                
+                <button class="button" id="botonZoomOriginal">🏠</button>
+                <button class="button" id="botonMas">+</button>
+                <button class="button" id="botonMenos">-</button>
                 <span class="span" id="funcion">f(x) = ax² + bx + c</span>
             </section>
-        </article>      
-<script src="script.js"></script>
+        </article>
+        <script src="script.js"></script>
     </body>
 </html>
