--- a/anotador-de-truco/index.html
+++ b/anotador-de-truco/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <button onclick='window.location = "./game/index.html"'>INICIAR</button>
+    <button onclick='window.location = "./game/"'>INICIAR</button>
 </body>
 
 </html>
