--- a/anotador-de-truco/index.html
+++ b/anotador-de-truco/index.html
@@ -7,8 +7,8 @@
     <title>Anotador de Truco Online Gratis</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <button onclick='window.location = "./game/"'>INICIAR</button>
+<body style="height: 100vh;">
+    <button onclick='window.location = "./game/index.html"'>INICIAR</button>
 </body>
 
 </html>
