--- a/anotador-de-truco/index.html
+++ b/anotador-de-truco/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body style="height: 100vh;">
-    <button onclick='window.location = `https://anotador-de-truco.netlify.app/game/index.html`'>INICIAR</button>
+    <a href="https://anotador-de-truco.netlify.app/game/index.html" target="_blank"><button>INICIAR</button></a>
 </body>
 
 </html>
