--- a/anotador-de-truco/game/index.html
+++ b/anotador-de-truco/game/index.html
@@ -8,20 +8,10 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <script>
-    function fullScreen () {
-        if (!document.fullscreenElement) {
-            document.body.requestFullscreen();
-            document.getElementById("btn-fullscreen").innerHTML = `<img src="../fullscreen_exit.png" alt="fullscreen exit icon">`;
-        }
-        else {
-            document.exitFullscreen();
-            document.getElementById("btn-fullscreen").innerHTML = `<img src="../fullscreen.png" alt="fullscreen icon">`;
-        }
-    }
 </script>
 <body>
     <div class="menu">
-        <button id="btn-fullscreen" class="btnalt" onclick='fullScreen()'>
+        <button id="btn-fullscreen" class="btnalt">
             <img src="../fullscreen.png" alt="fullscreen icon">
         </button>
     </div>
