--- a/anotador-de-truco/game/index.html
+++ b/anotador-de-truco/game/index.html
@@ -17,7 +17,7 @@
             document.exitFullscreen();
             document.getElementById("btn-fullscreen").innerHTML = `<img src="../fullscreen.png" alt="fullscreen icon">`;
         }*/
-        window.parent.postMessage('buttonClicked', 'https://your-domain.com');
+        window.parent.postMessage('buttonClicked', 'http://localhost:3000/');
     }
 </script>
 <body>
