--- a/anotador-de-truco/game/index.html
+++ b/anotador-de-truco/game/index.html
@@ -28,7 +28,7 @@
 </script>
 <body>
     <div class="menu">
-        <button id="btn-fullscreen" class="btnalt" onclick="fullScreen">
+        <button id="btn-fullscreen" class="btnalt" onclick="fullScreen()">
             <img src="../fullscreen.png" alt="fullscreen icon">
         </button>
     </div>
