--- a/anotador-de-truco/game/index.html
+++ b/anotador-de-truco/game/index.html
@@ -26,7 +26,7 @@
 ); 
     }
 </script>
-<body>
+<body style="background-color: #111">
     <div class="menu">
         <button id="btn-fullscreen" class="btnalt" onclick="fullScreen()">
             <img src="../fullscreen.png" alt="fullscreen icon">
