--- a/anotador-de-truco/game/web-inteli-games-iframe.html
+++ b/anotador-de-truco/game/web-inteli-games-iframe.html
@@ -12,7 +12,7 @@
         window.parent.postMessage("fullscreen-iframe-anot-truc", "*"); 
     }
 </script>
-<body style="background-color: #111 !important">
+<body id="body-juego">
     <div class="menu">
         <button id="btn-fullscreen" class="btnalt" onclick="fullScreen()">
             <img src="../fullscreen.png" alt="fullscreen icon">
