--- a/anotador-de-truco/game/index.html
+++ b/anotador-de-truco/game/index.html
@@ -19,7 +19,7 @@
         }
     }
 </script>
-<body style="background-color: #111 !important">
+<body id="body-juego">
     <div class="menu">
         <button id="btn-fullscreen" class="btnalt" onclick="fullScreen()">
             <img src="../fullscreen.png" alt="fullscreen icon">
