--- a/anotador-de-truco/index.html
+++ b/anotador-de-truco/index.html
@@ -7,7 +7,7 @@
     <title>Anotador de Truco Online Gratis</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body style="height: 100vh;">
+<body id="body-menu">
     <a href="https://anotador-de-truco.netlify.app/game/index.html"><button>INICIAR</button></a>
 </body>
 
