--- a/encontrar-funcion/index.html
+++ b/encontrar-funcion/index.html
@@ -1,53 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Encontrar Función</title>
-        <script src="decimal.js"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"rel="stylesheet">
-        <link rel="stylesheet" href="estilos.css">
-        <meta name="author" content="Eli Fainerman">
-        <meta name="robots" content="noindex">
-    </head>
-    <body>
-        <article>
-            <section class="metodoReduccion">
-                <div class="contenedor-canvas">
-                    <canvas class="canvas" id="canvasGraficarFuncion"></canvas>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th><span class="span" style="width: 100%;">x</span></th>
-                                <th><span class="span" style="width: 100%;">y</span></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td><input type="number" class="input" placeholder="x" id="xPuntoH" value="1"></td>
-                                <td><input type="number" class="input" placeholder="y" id="yPuntoH" value="1"></td>
-                            </tr>
-                            <tr>
-                                <td><input type="number" class="input" placeholder="x" id="xPuntoI" value="2"></td>
-                                <td><input type="number" class="input" placeholder="y" id="yPuntoI" value="4"></td>
-                            </tr>
-                            <tr>
-                                <td><input type="number" class="input" placeholder="x" id="xPuntoJ" value="-2"></td>
-                                <td><input type="number" class="input" placeholder="y" id="yPuntoJ" value="4"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <br>
-                
-                <button class="button" id="botonZoomOriginal">🏠</button>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Encontrar Función</title>
+    <script src="decimal.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="estilos.css">
+    <meta name="author" content="Eli Fainerman">
+    <meta name="robots" content="noindex">
+</head>
+
+<body>
+    <article>
+        <section>
+            <div class="contenedor-canvas">
+                <canvas class="canvas" id="canvasGraficarFuncion"></canvas>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th><span class="span" style="width: 100%;">x</span></th>
+                                            <th><span class="span" style="width: 100%;">y</span></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td><input type="number" class="input" placeholder="x" id="xPuntoH"
+                                                    value="1">
+                                            </td>
+                                            <td><input type="number" class="input" placeholder="y" id="yPuntoH"
+                                                    value="1">
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td><input type="number" class="input" placeholder="x" id="xPuntoI"
+                                                    value="2">
+                                            </td>
+                                            <td><input type="number" class="input" placeholder="y" id="yPuntoI"
+                                                    value="4">
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td><input type="number" class="input" placeholder="x" id="xPuntoJ"
+                                                    value="-2">
+                                            </td>
+                                            <td><input type="number" class="input" placeholder="y" id="yPuntoJ"
+                                                    value="4">
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <table style="width: 100%;">
+                                    <thead>
+                                        <tr>
+                                            <th><span class="span" style="width: 100%;">Tipo de Función</span></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                            <div class="radio-inputs">
+                                                <label>
+                                                    <input class="radio-input" type="radio" name="funcion" value="constante">
+                                                    <span class="radio-tile">
+                                                        <span class="radio-icon"><img class="fnc-icon" src="constante.png"></span>
+                                                        <span class="radio-label">Constante</span>
+                                                    </span>
+                                                </label>
+                                                <label>
+                                                    <input class="radio-input" type="radio" name="funcion" value="lineal">
+                                                    <span class="radio-tile">
+                                                        <span class="radio-icon"><img class="fnc-icon" src="lineal.png"></span>
+                                                        <span class="radio-label">Lineal</span>
+                                                    </span>
+                                                </label>
+                                                <label>
+                                                    <input checked="" class="radio-input" type="radio" name="funcion" value="cuadratica">
+                                                    <span class="radio-tile">
+                                                        <span class="radio-icon"><img class="fnc-icon" src="cuadratica.png"></span>
+                                                        <span class="radio-label">Cuadratica</span>
+                                                    </span>
+                                                </label>
+                                                <label>
+                                                    <input class="radio-input" type="radio" name="funcion" value="exponencial">
+                                                    <span class="radio-tile">
+                                                        <span class="radio-icon"><img class="fnc-icon" src="exponencial.png"></span>
+                                                        <span class="radio-label">Exponencial</span>
+                                                    </span>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <br>
+            <div class="tools">
+                <button class="button" id="botonZoomOriginal">⟲</button>
                 <button class="button" id="botonMas">+</button>
                 <button class="button" id="botonMenos">-</button>
                 <span class="span" id="funcion">f(x) = ax² + bx + c</span>
-            </section>
-        </article>
-        <script src="script.js"></script>
-    </body>
+            </div>
+        </section>
+    </article>
+    <script src="script.js"></script>
+</body>
+
 </html>
